fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,6 @@
 	adding changes before rebasing conflicts
 -->
 <head>
-	<title>respectful website gabba gool</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			sum more stuff
+			dummy text
 		</p>
 	</main>
 	<footer class="container">
