mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	adding changes before rebasing conflicts
 -->
 <head>
-	<title>respectful website</title>
+	<title>respectful website gabba gool</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			dummy text
+			sum more stuff
 		</p>
 	</main>
 	<footer class="container">
