--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 
-	adding changes before rebasing conflicts
 -->
 <head>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -17,7 +16,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			dummy text
+			dummy text, more garbage
 		</p>
 	</main>
 	<footer class="container">
