--- a/simple.html
+++ b/simple.html
@@ -3,6 +3,7 @@
 	Copyright 2014 
 -->
 <head>
+	<title> Updating title for stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			dummy text, more garbage
+			adding more additional text
 		</p>
 	</main>
 	<footer class="container">
