--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2014 
 -->
 <head>
-	<title> Updating title for stash example</title>
+	<title> Updating title for stash example anothe update</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
